[tool.poetry]
name = "the-streamlit-button-is-so-simple"
version = "0.1.0"
description = ""
authors = ["Myer Nore <pnore@hbs.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
